# intent-vision

./: .dockerignore  .env.example  .env.sops  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  tsconfig.json
.beads/: issues.jsonl  metadata.json
.claude/: hooks.md
.github/: CODEOWNERS  pull_request_template.md
000-docs/: 001-DR-GUID-beads-usage.md  002-DR-GUID-agentfs-usage.md  003-AT-ARCH-cloud-implementation-plan.md  004-DR-STND-vendor-policy.md  005-PM-TASK-interim-task-registry.md  (+71 more)
adk/: Makefile  pyproject.toml  requirements.txt
adk/agents/: __init__.py  shared_contracts.py
adk/agents/alert_tuner/: __init__.py  agent.py
adk/agents/alert_tuner/.well-known/: agent-card.json
adk/agents/metric_analyst/: __init__.py  agent.py
adk/agents/metric_analyst/.well-known/: agent-card.json
adk/agents/onboarding_coach/: __init__.py  agent.py
adk/agents/onboarding_coach/.well-known/: agent-card.json
adk/agents/orchestrator/: __init__.py  agent.py
adk/agents/orchestrator/.well-known/: agent-card.json
adk/agents/shared_tools/: __init__.py  common.py  intentvision_api.py
adk/agents/utils/: __init__.py  logging.py  memory.py
adk/scripts/ci/: check_arv_minimum.py  check_nodrift.sh  deploy_inline_source.py
adk/service/a2a_gateway/: Dockerfile  Dockerfile.cloudrun  __init__.py  cloudbuild.yaml  main.py
adk/tests/: __init__.py  conftest.py  test_a2a_gateway.py  test_agent_structure.py  test_shared_tools.py
(+47 files in other folders)
